commit to merge pull